--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 
 # - title: Home
 #   url: /
-- title: Bio
-  url: /bio/
+- title: About
+  url: /about/
 - title: Posts
   url: /posts/
 - title: Categories
