--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
 #   url: /
 - title: About
   url: /about/
-- title: Posts
-  url: /posts/
+# - title: Posts
+#   url: /posts/
 - title: Categories
   url: /categories/
 - title: Tags
